# de-camp

./: .gitignore  README.md  pyproject.toml
airflow/dags/: space_missions_launches_to_gcp.py
airflow/dags/utils/: missions_launches_transformation_script.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/aggregated/: agg_count_price_by_organisations.sql  avg_price_by_year.sql
dbt/models/staging/: src_space_mission_launches.yaml  stg_space_mission_launches__mission_launches.sql  stg_space_mission_launches__mission_launches.yaml
terraform/: main.tf  variables.tf
