[tool.poetry]
name = "de-camp"
version = "0.1.0"
description = ""
authors = ["Viktoria K <rikk_a@bk.ru>"]
readme = "README.md"
packages = [{include = "de_camp"}]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.0.1"
pendulum = "2.0.3"
apache-airflow = "2.5.3"
apache-airflow-providers-google = "8.11.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
